--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/iCoderBootstrap/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
+                    <a class="nav-link" href="/iCoderBootstrap/about">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
